crates/keron-lang/tests/corpus/errors/check/unary_neg_on_string.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unary `-` requires `Int` or `Double`, found `String`
  --> 1:9
  |
1 | val a = -"hi"
  |         ^^^^^^
